# MHH_Assignment

./: .gitignore  README.md
data/: 01_minimal.pnml  02_deadlock_simple.pnml  03_loop_simple.pnml  04_choice.pnml  05_parallel.pnml  06_mutex.pnml  07_dining_philosophers_2.pnml  08_producer_consumer.pnml  09_pipeline_3stage.pnml  10_complex_workflow.pnml  11_readers_writers.pnml  12_state_machine.pnml  13_token_ring.pnml  14_concurrent_tasks.pnml  15_large_state_space.pnml  benchmark_model.pnml  medium_model.pnml  simple_test.pnml
latex/: README.md  main.tex  preamble.tex
latex/sections/: conclusion.tex  implementation.tex  introduction.tex  references.tex  results.tex  theory.tex  titlepage.tex
output/: result.csv  table_performance.tex
scripts/: analyze_results.py  requirements.txt  run_all_tests.ps1
src/: CMakeLists.txt  bdd.cpp  bdd.h  bdd_mock.h  ilp.cpp  ilp.h  main.cpp  main_stub.cpp  parser.cpp  parser.h  reachability.cpp  reachability.h  utils.h
src/buddy/: config.h
testcase/: test_bdd.cpp  test_ilp.cpp  test_parser.cpp  test_reach.cpp
